Fixed crash when clicking Cancel in Add Files

This reworks the patch already taken from gnome bug 631472 as there
is more done in the commit that makes sense.

Taken from FR commit: 77e9b777042c557c961f058ecab2691a4fd19a62
From: Paolo Bacchilega <paobac@src.gnome.org>
Gnome bug: http://bugzilla.gnome.org/show_bug.cgi?id=631472